# university-church-in-maryland

./: .env.example  .gitignore  README.md  add_sample_content.py  pyproject.toml  robots.txt  run.py  sitemap.xml
app/: __init__.py  config.py  decorators.py  exceptions.py  models.py  site_content_schema.py  utils.py
app/routes/: main.py
app/sockets/: livechat_manager.py
migrations/: env.py
migrations/versions/: 5011659e3aac_add_disk_filename_column_to_pdffile.py  524b262ce399_.py  808e30267346_add_category_to_post.py  add_message_table.py  e9cfe31316e4_add_zoomlink_model.py  fae9b4ba8578_add_password_to_zoomlink.py
scripts/: __init__.py  import_pg_dump.py
static/css/: about_styles.css  bootstrap.min.css  chat.css  custom_styles.css  pastor_chat.css  read.css  upload_custom.css
static/js/: chat.js  main.js  pastor_chat.js  read.js
templates/: 404.html  500.html  about.html  add_content.html  base.html  bible_study.html  church_life.html  edit_content.html  edit_post.html  index.html  intro.html  login.html  manage_content.html  message.html  message_list.html  pastor_chat.html  read.html  sermons.html  upload.html  view_message.html
tests/: conftest.py  test_authentication.py  test_exceptions.py  test_routes.py
